# FunGraphicsPy

./: .gitignore  MANIFEST.in  README.md  SINGLE_FILE_README.md  fungraphics.py  fungraphics_import.py  pyproject.toml  setup.py  simple_example.py  usage_intellij.md
examples/: demo.py  demofull.py  dialogs.py  hangman.py  input_utils.py
src/fungraphics/: __init__.py  fun_graphics.py  utils.py
