[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fungraphics"
version = "1.0.0"
description = "A simple 2D graphics library for Python, perfect for learning programming"
readme = "README.md"
authors = [{name = "HES-SO Valais//Wallis"}]
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Topic :: Education",
    "Topic :: Multimedia :: Graphics",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = []

[project.optional-dependencies]
imaging = ["Pillow>=9.0.0"]

[project.urls]
Homepage = "https://github.com/isc-hei/FunGraphics"
Repository = "https://github.com/isc-hei/FunGraphics"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
